change settings vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "alura",
         "citacao",
+        "contapaga",
         "Matematica",
         "Numeros",
-        "operacao"
+        "operacao",
+        "usuario"
     ],
     "cSpell.language": "pt-BR,en,en-US"
 }
