--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "alura",
+        "apresentacao",
         "booleanos",
         "citacao",
         "contapaga",
+        "Funcao",
         "Matematica",
         "Numeros",
         "operacao",
