desafios e vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "citacao",
         "contapaga",
         "Funcao",
+        "indice",
         "Matematica",
+        "nomedo",
         "Numeros",
         "operacao",
         "usuario"
