Final commit all files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "indice",
         "Matematica",
         "nomedo",
+        "numeros",
         "Numeros",
         "operacao",
         "usuario"
