All alura files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "numeros",
         "Numeros",
         "operacao",
+        "precos",
         "usuario"
     ],
     "cSpell.language": "pt-BR,en,en-US"
